<resources>
    <string name="app_name">MyCalculator</string>
    <string name="calc_text_initial">0</string>
    <string name="divide">/</string>
    <string name="nine_num">9</string>
    <string name="eight_num">8</string>
    <string name="seven_num">7</string>
    <string name="six_num">6</string>
    <string name="five_num">5</string>
    <string name="four_num">4</string>
    <string name="one_num">1</string>
    <string name="two_num">2</string>
    <string name="three_num">3</string>
    <string name="zero_num">0</string>
    <string name="clr_text">CLR</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="star">*</string>
    <string name="btn_equal">=</string>
    <string name="dot_text">.</string>
</resources>