<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/background_gray"
        android:gravity="end|bottom"
        android:text="@string/calc_text_initial"
        android:textSize="48sp"
        android:padding="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_one"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/one_num"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/two_num"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/three_num"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_four"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/four_num"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/five_num"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/six_num"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:text="@string/star"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_seven"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/seven_num"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/eight_num"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/nine_num"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:text="@string/minus"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_zero"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/zero_num"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDecimal"
            android:text="@string/dot_text"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_clr"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onClr"
            android:text="@string/clr_text"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:text="@string/plus"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_equal"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onPerformCalculation"
            android:text="@string/btn_equal"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>